force-app/main/default/objects/ExamResults__c/ExamResults__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Exam Results</label>
    <nameField>
        <displayFormat>X-{0000}</displayFormat>
        <label>Exam Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>