force-app/main/default/objects/ExamResults__c/fields/CompleteExamBy__c.field-meta.xml
<CustomField>
    <fullName>CompleteExamBy__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>ExamsRequired__r.Application__r.CompleteExamBy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Exam By</label>
    <type>Date</type>
</CustomField>