force-app/main/default/objects/ExamResults__c/fields/ExamDate__c.field-meta.xml
<CustomField>
    <fullName>ExamDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>The date on which the Candidate took the Exam</inlineHelpText>
    <label>Exam Date</label>
    <type>Date</type>
</CustomField>