force-app/main/default/objects/ExamResults__c/fields/ExamScore__c.field-meta.xml
<CustomField>
    <fullName>ExamScore__c</fullName>
    <description>PacPoint-MV091019 - Created for PVL phase 1</description>
    <label>Exam Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>