force-app/main/default/objects/ExamResults__c/fields/ExamsRequired__c.field-meta.xml
<CustomField>
    <fullName>ExamsRequired__c</fullName>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Exams Required</label>
    <referenceTo>ExamsRequired__c</referenceTo>
    <relationshipLabel>Exam Results</relationshipLabel>
    <relationshipName>Exam_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>