force-app/main/default/objects/ExamResults__c/fields/LastRemediationDate__c.field-meta.xml
<CustomField>
    <fullName>LastRemediationDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>ExamsRequired__r.Application__r.RemedialCourseTaken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Remediation Date</label>
    <type>Date</type>
</CustomField>