force-app/main/default/objects/ExamResults__c/fields/NumberofDaysSinceExamResult__c.field-meta.xml
<CustomField>
    <fullName>NumberofDaysSinceExamResult__c</fullName>
    <formula>TODAY() -  ExamDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Since Exam Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>