force-app/main/default/objects/ExamResults__c/fields/RemedialCourseTaken__c.field-meta.xml
<CustomField>
    <fullName>RemedialCourseTaken__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>ExamsRequired__r.Application__r.RemedialCourseTaken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remedial Course Taken</label>
    <type>Date</type>
</CustomField>