force-app/main/default/objects/ExamResults__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExamsRequired__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ExamDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>